fixed spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-lewagon {
   justify-content: space-around;
   background: transparent;
-  height: 75px;
+  height: 70px;
   padding-left: 5px;
   padding-right: 5px;
   backdrop-filter: blur(22px);
